[tool.poetry]
name = "djangocourse"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2.2"
django-allauth = {extras = ["socialaccount"], version = "^65.9.0"}
psycopg = "^3.2.9"
dj-database-url = "^3.0.0"
django-anymail = {extras = ["mailgun"], version = "^13.0"}
django-widget-tweaks = "^1.5.0"
gunicorn = "^23.0.0"
whitenoise = {extras = ["brotli"], version = "^6.9.0"}


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.2.0"
django-browser-reload = "^1.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
