[tool.poetry]
name = "djangocourse"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2.2"
django-allauth = {extras = ["socialaccount"], version = "^65.9.0"}
psycopg = "^3.2.9"
dj-database-url = "^3.0.0"
django-anymail = {extras = ["mailgun"], version = "^13.0"}
django-widget-tweaks = "^1.5.0"
gunicorn = "^23.0.0"
whitenoise = {extras = ["brotli"], version = "^6.9.0"}


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.2.0"
django-browser-reload = "^1.18.0"
pytest = "^8.4.1"
pytest-django = "^4.11.1"
playwright = "^1.53.0"
pytest-playwright = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "djangocourse.settings"